Fixed image overflow at small sizes in product overview page.

--- a/site/app/views/product/overview.html.haml
+++ b/site/app/views/product/overview.html.haml
@@ -70,10 +70,9 @@
 
 %section#scale
   %a{:name => 'scale'}
+  %h2 Blow the doors off your expectations
   = image_tag 'overview-scaling.png', :alt => 'OpenShift Scaling'
   :markdown
-    ## Blow the doors off your expectations
-
     Once you have your application running in the Cloud, the next thing to worry about is how it is going to handle the massive amount of usage it gets when it goes viral.  Well, no worries here.  OpenShift has you covered.  
     
     OpenShift provides both automatic and manual scaling of the resources that are supporting your application so that it will be able to service any volume of activity that you can dream of.  This is one of the sweet benefits of OpenShift PaaS…  you don't need to worry about any infrastructure or middleware issues like administration, tuning, or scaling.  OpenShift handles this for you.  
