--- a/console/app/views/layouts/console/_header.html.haml
+++ b/console/app/views/layouts/console/_header.html.haml
@@ -35,5 +35,5 @@
       #identity.pull-right
         Logged in as: 
         %span.username
-          = session[:login]
+          = session_user.login
 
