--- a/console/app/views/user/show.html.haml
+++ b/console/app/views/user/show.html.haml
@@ -28,7 +28,7 @@
         .well
           http://applicationname&ndash;
           %strong.namespace>= @domain.name
-          = ".rhcloud.com"
+          = RestApi.application_domain_suffix
         .btn-toolbar
           = link_to "Change your namespace...", edit_domain_path, :class => 'btn'
 
