Remove puts, separate out identity specific info so that it can be overriden

--- a/console/app/views/layouts/console/_header.html.haml
+++ b/console/app/views/layouts/console/_header.html.haml
@@ -31,9 +31,6 @@
         %li= link_to "Community", community_url
         %li= link_to "My Account", account_path
         %li= link_to "Sign Out", logout_path
-        
-      #identity.pull-right
-        Logged in as: 
-        %span.username
-          = session_user.login
+
+      = render :partial => 'layouts/console/identity', :local => {:user => session_user}
 
