--- a/console/app/views/user/show.html.haml
+++ b/console/app/views/user/show.html.haml
@@ -5,17 +5,7 @@
 = flashes
 .row
   .span7
-    %section
-      = div_for @user do
-        %h2 Personal Information
-
-        %p
-          We will only use your email account for information about your account. We do not share it with third parties.
-
-        .btn-toolbar
-          = link_to "Change password...", edit_password_path, :class => 'btn'
-          -#%li= link_to "Terms of Use", legal_site_terms_path
-          -#%li= link_to "Privacy Policy", legal_openshift_privacy_path
+    = render :partial => 'user/identity', :locals => {:user => @user}
 
     %section
       %h2 Namespace
@@ -28,7 +18,7 @@
         .well
           http://applicationname&ndash;
           %strong.namespace>= @domain.name
-          = RestApi.application_domain_suffix
+          = ".#{RestApi.application_domain_suffix}"
         .btn-toolbar
           = link_to "Change your namespace...", edit_domain_path, :class => 'btn'
 
