--- a/console/app/views/application_types/show.html.haml
+++ b/console/app/views/application_types/show.html.haml
@@ -26,13 +26,13 @@
           -# If the user has a domain, use it, otherwise prompt them for that field
           - if @domain and @domain.persisted?
 
-            %span.add-on-last> -#{@domain.name}.#{RestApi.application_domain_suffix}
+            %span.add-on-last> -#{@domain.name}#{RestApi.application_domain_suffix}
 
           - else
 
             %span.add-on-middle> &ndash;
             = f.text_field :domain_name, :value => "#{@application.domain_name}", :placeholder => 'Namespace', :maxlength => 16, :class => @application.errors[:domain_name].present? ? 'error domain_name' : 'domain_name'
-            %span.add-on-last>= ".#{RestApi.application_domain_suffix}"
+            %span.add-on-last>= RestApi.application_domain_suffix
         .row.control-group.error
           #app-errors.span
         .row
