--- a/site/app/views/layouts/console/_header.html.haml
+++ b/site/app/views/layouts/console/_header.html.haml
@@ -24,13 +24,12 @@
           = navigation_tab :applications, :action => :index, :name => "My Applications"
           = navigation_tab :application_types, :name => "Create a New Application"
           = navigation_tab :console, :action => :help, :name => "Help"
+          = navigation_tab :user, :action => :show, :name => "My Account"
           -#= navigation_tab :help, :show
-          -#= navigation_tab :user, :action => :show
 
       %ul.navbar-text.pull-right#utility-nav
         %li= link_to "Community", community_url
-        %li= link_to "My Account", account_path
-        %li= link_to "Sign Out", logout_path
+        %li= link_to "Developer Center", "#"
 
       %ul#identity.nav.pull-right
         %li.dropdown.username
