--- a/site/app/stylesheets/_custom.scss
+++ b/site/app/stylesheets/_custom.scss
@@ -8,12 +8,6 @@ ABB64C -> green -> success
 93D8E2 -> lite blue -> info
 ------------------------------------------------ */
 
-a {
-	color: #0069d6;
-	}
-a:hover {
-  color: #00438a;
-	}
 #content {
 	min-height: 550px;
 	}
@@ -33,107 +27,27 @@ ol.unstyled {margin-left: 0;list-style: none;}
 .page-header {
 	padding-bottom: 0;
 	}
+
+// label overrides
 .label {
   padding: 3px 3px 1px;
-  font-size: 9.75px;
-  font-weight: bold;
-  color: #ffffff;
   text-transform: uppercase;
-  background-color: #999999;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
 }
-.label-important {
-  background-color: #c00;
-}
-.label-warning {
-  background-color: #ffb02e;
-}
-.label-success {
-  background-color: #ABB64C;
+
+// form overrides
+input, 
+textarea {
+  @include box-shadow(0);
 	}
-.label-info {
-  background-color: #93d8e2;
+input:focus, 
+textarea:focus {
+  @include box-shadow(0);
 	}
-input, textarea {
-  -webkit-box-shadow: 0;
-  -moz-box-shadow: 0;
-  box-shadow: 0;
-	}
-input:focus, textarea:focus {
-  -webkit-box-shadow: 0;
-  -moz-box-shadow: 0;
-  box-shadow: 0;
-	}
-.control-group.warning > label, .control-group.warning .help-inline {
-  color: #FF9F00;
-	}
-.control-group.warning input, .control-group.warning select, .control-group.warning textarea {
-  color: #FF9F00;
-  border-color: #FF9F00;
-	}
-.control-group.warning input:focus, .control-group.warning select:focus, .control-group.warning textarea:focus {
-  border-color: #FF9F00;
-  -webkit-box-shadow: 0 0 6px #FF9F00;
-  -moz-box-shadow: 0 0 6px #FF9F00;
-  box-shadow: 0 0 6px #FF9F00;
-	}
-.control-group.warning .input-prepend .add-on, .control-group.warning .input-append .add-on {
-  color: #FF9F00;
-  background-color: #fcf8e3;
-  border-color: #FF9F00;
-	}
-.control-group.error > label, .control-group.error .help-inline {
-  color: #cc0000;
-	}	
-.control-group.error input, .control-group.error select, .control-group.error textarea {
-  color: #cc0000;
-  border-color: #cc0000;
-	}
-.control-group.error input:focus, .control-group.error select:focus, .control-group.error textarea:focus {
-  border-color: #953b39;
-  -webkit-box-shadow: 0 0 6px #CD1E25;
-  -moz-box-shadow: 0 0 6px #CD1E25;
-  box-shadow: 0 0 6px #CD1E25;
-	}
-.control-group.error .input-prepend .add-on, .control-group.error .input-append .add-on {
-  color: #cc0000;
-  background-color: #f2dede;
-  border-color: #cc0000;
-	}
-.control-group.success > label, .control-group.success .help-inline {
-  color: #95a321;
-	}
-.control-group.success input, .control-group.success select, .control-group.success textarea {
-  color: #95a321;
-  border-color: #95a321;
-	}
-.control-group.success input:focus, .control-group.success select:focus, .control-group.success textarea:focus {
-  border-color: #468847;
-  -webkit-box-shadow: 0 0 6px #468847;
-  -moz-box-shadow: 0 0 6px #468847;
-  box-shadow: 0 0 6px #468847;
-	}
-.control-group.success .input-prepend .add-on, .control-group.success .input-append .add-on {
-  color: #95a321;
-  background-color: #dff0d8;
-  border-color: #95a321;
-	}
-.control-group input.error, .control-group textarea.error, .control-group select.error {
-	color: #cc0000;
-	background-color: #f2dede;
-  border-color: #cc0000;
-	}
-.control-group input.error:focus, .control-group select.error:focus, .control-group textarea.error:focus {
-  border-color: #953b39;
-  -webkit-box-shadow: 0 0 6px #CD1E25;
-  -moz-box-shadow: 0 0 6px #CD1E25;
-  box-shadow: 0 0 6px #CD1E25;
-  }
+
 .form-actions {
 	background-color: none;
 	}
+
 .help-block-multiple {
 	background-color: #FFFCE4;
  	border: 4px solid #ddd;
@@ -147,208 +61,8 @@ input:focus, textarea:focus {
   background: #f0f0f0;
   padding: 20px;
 	}
-.input-prepend, .input-append, .input-prepend-append {
-  margin-bottom: 5px;
-  *zoom: 1;
-	}
-.input-prepend:before,
-.input-append:before,
-.input-prepend:after,
-.input-append:after,
-.input-prepend-append:before,
-.input-prepend-append:after {
-  display: table;
-  content: "";
-	}
-.input-prepend:after, .input-append:after, .input-prepend-append:after {
-  clear: both;
-	}
-.input-append input,
-.input-append .uneditable-input {
-  -webkit-border-radius: 3px 0 0 3px;
-  -moz-border-radius: 3px 0 0 3px;
-  border-radius: 3px 0 0 3px;
-	}
-.input-prepend input,
-.input-prepend .uneditable-input {
-  -webkit-border-radius: 0 3px 3px 0;
-  -moz-border-radius: 0 3px 3px 0;
-  border-radius: 0 3px 3px 0;
-	}
-.input-prepend input:focus,
-.input-append input:focus,
-.input-prepend-append input:focus,
-.input-prepend .uneditable-input:focus,
-.input-append .uneditable-input:focus {
-  position: relative;
-  z-index: 2;
-	}
-.input-prepend .uneditable-input, .input-append .uneditable-input {
-  border-left-color: #ccc;
-	}
-.input-prepend .add-on, .input-append .add-on, 
-.input-prepend-append .add-on-first, .input-prepend-append .add-on-last {
-  float: left;
-  display: block;
-  width: auto;
-  min-width: 16px;
-  height: 18px;
-  margin-right: -1px;
-  padding: 4px 11px;
-  font-weight: normal;
-  line-height: 18px;
-  color: #999999;
-  text-align: center;
-  background-color: #f4f4f4;
-  border: 1px solid #ccc;
-  -webkit-border-radius: 3px 0 0 3px;
-  -moz-border-radius: 3px 0 0 3px;
-  border-radius: 3px 0 0 3px;
-	}
-.input-append .add-on {
-  border-radius: 0 3px 3px 0;
-	}
-.input-prepend-append input {
-	-webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-  border-left: 0;
-  border-right: 0;
-  float: left;
-	}
-.input-prepend-append .add-on-first {
-	margin-right: 0;
-	}
-.input-prepend-append .add-on-last {
-	display: inline;
-  -webkit-border-radius: 0 3px 3px 0;
-  -moz-border-radius: 0 3px 3px 0;
-  border-radius: 0 3px 3px 0;
-	}
-.input-prepend-append .add-on-middle {
-	display: block;
-  float: left;
-  height: 18px;
-  line-height: 18px;
-  padding: 4px 5px;
-  text-align: center;
-  background-color: #fff;
-  color: #999;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
-	}
-.input-prepend .active, .input-append .active, .input-prepend-append .active {
-  background-color: #a9dba9;
-  border-color: #46a546;
-	}
-.input-prepend-append .add-on {
-	border: 1px solid #f4f4f4;
-	}
-.form-inline .input-prepend-append {
-  display: inline-block;
-	}
-.form-inline .input-prepend-append .add-on-first,
-.form-inline .input-prepend-append .add-on-last {
-  vertical-align: middle;
-	}
-.control-group-important .input-prepend-append .add-on-first,
-.control-group-important .input-prepend-append .add-on-last,
-.control-group-important .input-prepend-append .add-on-middle,
-.control-group-important .input-prepend-append input,
-.control-group-important .input-prepend-append input {
-  font-size: 15px;
-  padding: 8px 10px;
-  max-width: 716px;
-  }
-  .control-group-important label {
-  	font-size: 15px;
-  	}
-  .form-horizontal .control-group-important > label {
-    padding-top: 10px;
-    }
 
-.navbar-inner {
-  padding-left: 20px;
-  padding-right: 20px;
-  background-color: #212121;
-  background-image: -moz-linear-gradient(top, #323232, #191919);
-  background-image: -ms-linear-gradient(top, #323232, #191919);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#323232), to(#191919));
-  background-image: -webkit-linear-gradient(top, #323232, #191919);
-  background-image: -o-linear-gradient(top, #323232, #191919);
-  background-image: linear-gradient(top, #323232, #191919);
-  background-repeat: repeat-x;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-	}
-.navbar .nav {
-  position: relative;
-  left: 0;
-  display: block;
-  float: left;
-  margin: 7px 10px 0 0;
-	}
-.navbar .nav.pull-right {
-  float: right;
-	}
-.navbar .nav > li {
-  display: block;
-  float: left;
-	}
-.navbar .nav > li > a {
-  float: none;
-  padding: 8px 13px 10px;
-  line-height: 19px;
-  color: #999999;
-  text-decoration: none;
-  font-weight: normal;
-	}
-.navbar .nav > li > a:hover {
-  background-color: transparent;
-  color: #ffffff;
-  text-decoration: none;
-	}
-.navbar .nav .active > a, .navbar .nav .active > a:hover {
-  color: #ffffff;
-  text-decoration: none;
-  background-color: #111;
-  border-left: 1px solid #444;
-  border-right: 1px solid #444;
-  border-top: 1px solid #444;
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.5) inset;
-  cursor: default;
-	}
-.navbar .brand {	
-	color: #fff;
-  display: block;
-  float: left;
-  font-size: 16px;
-  font-weight: 200;
-  line-height: 1;
-  margin: 8px 8px 0 -20px;
-  padding: 8px 20px 12px;
-  text-shadow: 0 1px 2px #000000;
-	}
-.navbar .brand span {
-	white-space: nowrap;
-	}
-.navbar .brand sup {
-	left: -2px;
-  top: -0.75em;
-  font-size: 8px;
-  font-weight: 100;
-	}
-.navbar .navbar-text {
-  margin: 15px -8px 0 0;
-  line-height: 40px;
-  color: #999;
-  font-weight: 200;
-	}
-.navbar .navbar-text a {
-	color: #999;
-	}
+// hero overrides
 .hero-unit {
   padding: 20px 25px;
   margin-bottom: 25px;
@@ -369,37 +83,8 @@ input:focus, textarea:focus {
   font-weight: 200;
   line-height: 27px;
 	}
-.postit { 
-  position: relative;
-  padding: 20px 5% 10px; 
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#f7f7d2), to(#f0f29b)); 
-  background-image: -ms-linear-gradient(top, #f7f7d2, #f0f29b); 
-  background-image: -moz-linear-gradient(top, #f7f7d2, #f0f29b); 
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f7f7d2), color-stop(100%, #f0f29b));
-  background-image: -webkit-linear-gradient(top, #f7f7d2, #f0f29b);
-  background-image: -o-linear-gradient(top, #f7f7d2, #f0f29b);
-  background-image: linear-gradient(top, #f7f7d2, #f0f29b);
-  background-repeat: repeat-x;
-  -webkit-box-shadow: 0 2px 12px rgba(0,0,0,0.5);
-  -moz-box-shadow: 0 2px 12px rgba(0,0,0,0.5);
-  box-shadow: 0 1px 2px #aaa;
-}
-.postit .tape {
-  position: absolute;
-  left: 40%;
-  top: -15px;
-  width: 20%;
-  height: 25px;
-  z-index: 2;
-  background-color: rgba(243,245,228,0.5);
-  border: 2px solid rgba(255,255,255,0.5);
-  -webkit-box-shadow: 0 0 3px #aaa;
-  -moz-box-shadow: 0 0 3px #aaa;
-  box-shadow: 1px 1px 1px #aaa;
-  -webkit-transform: rotate(-6deg);
-  -moz-transform: rotate(-6deg);
-  -o-transform: rotate(-6deg);
-}
+
+// wizard steps
 .wizard-steps {
 	margin: 5px 0 13px;
 	overflow: hidden;
@@ -424,30 +109,12 @@ input:focus, textarea:focus {
 	box-shadow: none;
 	padding: 0;
 	}
-.clearfix:before, .clearfix:after { content: ""; display: table; }
-.clearfix:after { clear: both; }
-.clearfix { *zoom: 1; }
-.clear-both { clear: both; }
-.left { text-align: left; }
-.center { text-align: center; }
-.right { text-align: right; }
 
-#utility-nav li {
-	display: block;
-  float: left;
-  margin-left: 5px;
-	}
-#utility-nav li a {
-  color: #999999;
-	padding: 10px;
-	text-decoration: none;
-	}
-#utility-nav li a:hover {
-  color: #ffffff;
-	}
-.invisible {
-  border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px;
-	}
+// alerts
+.alert {
+  border-width: 0;
+  padding: 9px 35px 10px 21px;
+}
 
 #footer-nav {
   padding-top: 35px;
@@ -529,24 +196,6 @@ input:focus, textarea:focus {
   
 
 /* Responsive styles */
-
-@media (max-width: 480px) {
-	.input-prepend-append input {
-    border-left: 1px solid;
-    border-radius: 0 0 0 0;
-    border-right: 1px solid;
-		}
-	.input-prepend-append .add-on-middle {
-    background-color: #FFFFFF;
-    border-bottom: 0 none;
-    border-top: 0 none;
-    box-shadow: none;
-    display: block;
-    float: left;
-    padding: 0px 6px 5px;
-		}
-}
-
 @media (max-width: 767px) {
 	.hero-unit {
   	padding: 0;
