--- a/site/app/stylesheets/common.scss
+++ b/site/app/stylesheets/common.scss
@@ -34,6 +34,7 @@
 @import "type";
 @import "bootstrap/code";
 @import "bootstrap/forms";
+@import "input-prepend-append";
 @import "bootstrap/tables";
 
 // Components: common
@@ -44,7 +45,7 @@
 @import "bootstrap/close";
 
 // Components: Buttons & Alerts
-@import "bootstrap/buttons";
+@import "buttons";
 @import "bootstrap/button-groups";
 @import "bootstrap/alerts"; // Note: alerts share common CSS with buttons and thus have styles in buttons.scss
 
