--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -4,7 +4,7 @@
 
 @import "variables";
 @import "bootstrap/variables";
-@import "navbar";
+@import "console/navbar";
 
 /*------------------------------------------------------
 	 Console specific styles
