--- a/site/app/stylesheets/console/_navbar.scss
+++ b/site/app/stylesheets/console/_navbar.scss
@@ -1,5 +1,9 @@
 /* no longer used, see site/_navbar */
 
+.navbar {
+  margin-bottom: $baseLineHeight;
+}
+
 .navbar-inner {
   padding-left: 20px;
   padding-right: 20px;
