--- a/site/app/views/application_types/show.html.haml
+++ b/site/app/views/application_types/show.html.haml
@@ -1,4 +1,4 @@
-:css
+-#:css
   .application_type {background-color: #F5F5F5; padding: 9px 35px 10px 21px; margin-bottom: 20px;}
   .application_type > ul.meta > li {display: inline;}
   .application_type > ul.meta > li > label {display: inline;}
@@ -6,7 +6,7 @@
 %h1.invisible Configure New Application
 = app_wizard_steps_create 1
 
-= render :partial => @application_type, :locals => {:hide_link => true, :extra_info => true}
+= render :partial => @application_type, :locals => {:hide_link => true, :extra_info => true, :classes => 'tile'}
 
 = semantic_form_for @application, :html => {:class => 'form-horizontal'} do |f|
   = f.hidden_field :application_type, :value => @application_type.id
