--- a/site/app/views/application_types/index.html.haml
+++ b/site/app/views/application_types/index.html.haml
@@ -1,4 +1,4 @@
-:css
+-#:css
   .application_type {background-color: #F5F5F5; padding: 9px 35px 10px 21px; margin-bottom: 20px; cursor: pointer;}
   .application_type:hover {background-color: #e0e0e0;}
   .application_type:active {background-color: #CC0000; color: white}
@@ -16,7 +16,7 @@
 .row
   - @framework_types.each_slice((@framework_types.length/2.0).ceil).each do |types|
     .span6
-      = render :collection => types, :partial => 'application_types/application_type'
+      = render :collection => types, :partial => 'application_types/application_type', :locals => {:classes => 'tile tile-click'}
 
 -# unless @popular_types.empty?
   .row
