minor position edits and class change on get started

--- a/site/app/views/applications/get_started.html.haml
+++ b/site/app/views/applications/get_started.html.haml
@@ -71,7 +71,7 @@
           -#FIXME has multiple cartridges with source code
 
       - else
-        %div.alert.alert-info
+        %div.well
           %h4 Set your Public Key
           %p
             Before you can upload code, you need to provide us with a 
