Abstract out messaging and handle navbar bottom margin a bit cleaner

--- a/site/app/stylesheets/site/_navbar.scss
+++ b/site/app/stylesheets/site/_navbar.scss
@@ -103,6 +103,10 @@
   }
 }
 
+.section-nav > .navbar:last-child {
+  margin-bottom: 20px;
+}
+
 @media (max-width: 767px) {
   .navbar {
     padding-top: 15px;
