fix styling on create app page

--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -290,6 +290,9 @@ ol.wizard li a {
     color: #cfcfcf;
     }
 
+.help-block-multiple {
+  background: transparent;
+}
 
 /* nav overwrite bootstrap */		
 .navbar .nav > li > a {
