--- a/site/app/views/application_types/show.html.haml
+++ b/site/app/views/application_types/show.html.haml
@@ -3,9 +3,9 @@
   .application_type > ul.meta > li {display: inline;}
   .application_type > ul.meta > li > label {display: inline;}
 
-%h1.invisible Configure New Application
 = app_wizard_steps_create 1
 
+%h1 Configure New Application
 = render :partial => @application_type, :locals => {:hide_link => true, :extra_info => true, :classes => 'tile'}
 
 = semantic_form_for @application, :html => {:class => 'form-horizontal'} do |f|
