--- a/site/app/stylesheets/_buttons.scss
+++ b/site/app/stylesheets/_buttons.scss
@@ -19,7 +19,7 @@
   @include buttonBackground($white, darken($white, 10%));
   border: 1px solid #ccc;
   border-bottom-color: #bbb;
-  @include border-radius(4px);
+  @include border-radius(2px); //4px
   $shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
   @include box-shadow($shadow);
   cursor: pointer;
@@ -82,7 +82,7 @@
   padding: 9px 14px;
   font-size: $baseFontSize + 2px;
   line-height: normal;
-  @include border-radius(5px);
+  @include border-radius(2px); //5px
 }
 .btn-large [class^="icon-"] {
   margin-top: 1px;
