style dark layout closer to mockups

--- a/site/app/views/layouts/console/dark_layout.html.haml
+++ b/site/app/views/layouts/console/dark_layout.html.haml
@@ -1,5 +1,5 @@
 = content_for :sub_layout do
-  .simple-content#content
+  .section-striped#content
     .container
       .row-content
         .row.row-flush-right#console-panel
