--- a/site/app/views/cartridge_types/index.html.haml
+++ b/site/app/views/cartridge_types/index.html.haml
@@ -1,17 +1,3 @@
-:css
-  .cartridge_type {background-color: #F5F5F5; padding: 9px 35px 10px 21px; margin-bottom: 20px; cursor: pointer;}
-  .cartridge_type:hover {background-color: #e0e0e0;}
-  .cartridge_type:active {background-color: #CC0000; color: white}
-  .cartridge_type > ul.meta > li > label {display: inline;}
-  .cartridge_type.installed:hover {background-color: #F5F5F5;}
-  .cartridge_type.installed:active {background-color: #F5F5F5;}
-  .cartridge_type.installed{color:#959595; cursor: auto;}
-  .cartridge_type.installed > h3 {color:#959595 !important;}
-  .cartridge_type.inactive:hover {background-color: #F5F5F5;}
-  .cartridge_type.inactive:active {background-color: #F5F5F5;}
-  .cartridge_type.inactive{color:#959595; cursor: auto;}
-  .cartridge_type.inactive > h3 {color:#959595 !important;}
-
 %h1.invisible Add a New Cartidge
 = cartridge_wizard_steps_create 0
 - if @framework.id == 'haproxy-1.4'
@@ -34,14 +20,14 @@
   - unless @installed_cart_types.empty?
     .span6
       %h2 Installed cartridges
-      = render :collection => @installed_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:hide_link => true}
+      = render :collection => @installed_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true}
 
   - unless @requires_cart_types.empty? and @conflicts_cart_types.empty? and @blocked_cart_types.empty?
     .span6
       %h2 Cartridges that cannot be installed
-      = render :collection => @requires_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:hide_link => true, :reason => :requires}
-      = render :collection => @conflicts_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:hide_link => true, :reason => :conflicts}
-      = render :collection => @blocked_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:hide_link => true, :reason => :blocked}
+      = render :collection => @requires_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :requires}
+      = render :collection => @conflicts_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :conflicts}
+      = render :collection => @blocked_cart_types, :partial => 'cartridge_types/cartridge_type', :locals => {:inactive => true, :reason => :blocked}
 
 - content_for :javascripts do
   :javascript
