--- a/site/app/views/product/index.html.haml
+++ b/site/app/views/product/index.html.haml
@@ -43,17 +43,17 @@
         .span6
           %ul.news.unstyled
             %li
-              = link_to openshift_blog_url, :class => 'link-tile' do
-                %h4 Want to keep up to date?
-                %p Keep up to date with the latest news and announcements from the OpenShift team. Our team is constantly bringing you the latest advice and tutorials.
+              = link_to opensource_community_url, :class => 'link-tile' do
+                %h4 OpenShift is Open Source
+                %p The components that power OpenShift are now available on GitHub and you can download our Fedora Remix image to try it out yourself.  Hit the Open Source page for the Open in OpenShift.
             %li
               = link_to console_path, :class => 'link-tile' do
-                %h4 Try out the new console
-                %p The new console is out of preview and ready to help you build your apps in the cloud. We'll be adding lots more features to the console, so check back frequently!
+                %h4 The console gets a makeover
+                %p We want the new console to be easy to use, easy to read, and easy to remember, so we're giving it the styling attention it deserves.  Check it out today.
             %li
-              = link_to events_url, :class => 'link-tile' do
-                %h4 Meet the OpenShift team
-                %p We're in your area - check out the event list and join us!
+              = link_to developers_url, :class => 'link-tile' do
+                %h4 Find answers in the Developer Center
+                %p Building applications involves lots of questions and we want you to find those answers fast.  The new Developer Center will centralize and organize your OpenShift life.
 
       .row
         .span6
